frontend/glitchtip-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-frontend
  labels:
    app: glitchtip-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: glitchtip-frontend
